<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InputDataActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/green"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/free_gul"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:textAlignment="center" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="415dp"
        android:layout_height="350dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="250dp"
        android:src="@drawable/rectangle_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/input_data_pasien"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />


    <EditText
        android:id="@+id/nama_lengkap"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:background="@drawable/input"
        android:hint="@string/nama_lengkap"
        android:inputType="text"
        android:padding="17.5dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usia"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/usia"
        android:inputType="number"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_lengkap" />

    <RadioButton
        android:id="@+id/laki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/laki_laki"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/hp"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/perempuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="32dp"
        android:text="@string/perempuan"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/hp"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/hp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="564dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/no_handphone"
        android:inputType="number"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/kirimData"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/green"
        android:text="@string/cek_gula"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>